@@ -32,3 +32,8 @@ Format:
 	
 	TableView      get_sorted_view(size_t column_ndx, bool ascending=true);
 	ConstTableView get_sorted_view(size_t column_ndx, bool ascending=true) const; (for class TableView and ConstTableView)
+
+
+2012-07-08 (Kristian Spangsege)
+----------
+. LangBindHelper::new_table() now returns null on memory allocation error. This may change in the future to instead throw an exception.
